
2023-07-22  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (compute_size): inspect field storage to check for
	  the appropriate field size limit

2023-07-21  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (refmod_checks): fixed ec-bound-refmod checks for UNBOUNDED
	* field.c (compute_size): take fields before the UNBOUNDED field into
	  account when calculating its maximum elements;
	  fix compiler crash if DEPENDING field does not exist
	* parser.y (validated_field_reference): extracted from (identifier_field)
	  and used in all places with the exact same code

2023-07-20  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (copy_validation): new function
	* field.c (copy_validation, copy_into_field): handling validation
	* cobc.c (print_fields): leave a hint to field being TYPEDEF
	* cobc.c (xref_fields): dont output references for TYPEDEF sub items

2023-07-19  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (refmod_checks): extracted from (cb_build_identifier)
	* typeck.c (refmod_checks): prevent condition-names to be reference-modified
	* parser.y (class_value): improved error messages
	* tree.c (cb_build_cast): set numeric category for all integer casts

2023-07-15  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_identifier): allow ref-mod up to identifier length
	* typeck.c (cb_build_identifier): new warning for suspicious reference-
	  modification with start or length set to maximum and the other to var
	* typeck.c (cb_build_move_literal): optimize to cb_build_move_num_zero in
	  more cases

2023-07-13  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (cb_ppecho_direct, output_pending_newlines): output only up
	  to 9 empty lines, for more empty lines in the preparsed output file
	  generate a matching #line directive, this saves both space and serves
	  as a workaround for an unclear scanner bug that may happen with huge
	  amounts of empty lines
	* pplex.l (switch_to_buffer): don't re-strdup the filename